' Generated by UML Generator
' Encoded: hLR1Rjim3BtxAmJi4gzriLqDREYMR40kQm4Ns5cHcLIeB1cINApfykyJfTQLOda5Wbo2wF7naQAVcLmRIxKTEb6O1ovxgcb7cA36VBDMyyrWOSsKRFWUoAVYdhT06DTCG55u5hdHBMZoN11IFJifozc1ACIMQf0MT4sujEGB-OmC7rYt7iCpPx3KGBkQh5--8ThJfmwaRQoc5dPFDRbD0UHWgS7Kn65SxX2ftCU5xsOnbRqaxucMcDvhnS2OHLcJHyLRX7PWRqBNY8Q-4NnLHZHg7aEDxmq3OtS8tobB1QAj6ZPkW8UYe1lZoZCR9Zxg-75YoWeCqxotNCc9tArsrupa76fLO4JS-I8hOCfTNOM7zo7_AFnG9ncP0PSdT7nuzT1lkjqAM2e9QLCNcS2vQz-fldUqj71b0_gBTX1xx0NsOj7WmvYEbR8sp0YFO29RdcO1xxEnHCQ3RvLoq_XE3IGkhBQ2FYeT3y6uNH2VDoudFv5ORP4ANP9Ofdo7VVemVdgT2HdtMVgMXFitlJi_2317HfpYv_RXybun9TmgMcc-tulZDs4sVEu-Vlnnow9XIlL77MG2vwiTVaK-LjNRzfdkgQhw-_L_yIGzjrCIWH7EKg-kebAJ7J4ZDE4bAicxbTubOxkP4XbcKcJUHZE2ymc9RiuMCuevQg9r3R9rVpZ-0G
' URL: http://www.plantuml.com/plantuml/uml/hLR1Rjim3BtxAmJi4gzriLqDREYMR40kQm4Ns5cHcLIeB1cINApfykyJfTQLOda5Wbo2wF7naQAVcLmRIxKTEb6O1ovxgcb7cA36VBDMyyrWOSsKRFWUoAVYdhT06DTCG55u5hdHBMZoN11IFJifozc1ACIMQf0MT4sujEGB-OmC7rYt7iCpPx3KGBkQh5--8ThJfmwaRQoc5dPFDRbD0UHWgS7Kn65SxX2ftCU5xsOnbRqaxucMcDvhnS2OHLcJHyLRX7PWRqBNY8Q-4NnLHZHg7aEDxmq3OtS8tobB1QAj6ZPkW8UYe1lZoZCR9Zxg-75YoWeCqxotNCc9tArsrupa76fLO4JS-I8hOCfTNOM7zo7_AFnG9ncP0PSdT7nuzT1lkjqAM2e9QLCNcS2vQz-fldUqj71b0_gBTX1xx0NsOj7WmvYEbR8sp0YFO29RdcO1xxEnHCQ3RvLoq_XE3IGkhBQ2FYeT3y6uNH2VDoudFv5ORP4ANP9Ofdo7VVemVdgT2HdtMVgMXFitlJi_2317HfpYv_RXybun9TmgMcc-tulZDs4sVEu-Vlnnow9XIlL77MG2vwiTVaK-LjNRzfdkgQhw-_L_yIGzjrCIWH7EKg-kebAJ7J4ZDE4bAicxbTubOxkP4XbcKcJUHZE2ymc9RiuMCuevQg9r3R9rVpZ-0G
' Generated on: 2026-04-25T01:07:53.706453

@startuml
skinparam classAttributeIconSize 0
hide circle

class Order {
  -{static} orderCounter: int = 1
  -orderId: int
  -iceCream: IceCream
  -paymentStrategy: PaymentStrategy
  -status: String
  --
  +Order(iceCream: IceCream, paymentStrategy: PaymentStrategy)
  +process(): void
  +getOrderId(): int
  +getIceCream(): IceCream
  +getStatus(): String
  +getTotal(): double
}

abstract class IceCream {
  +getDescription(): String
  +getPrice(): double
  +toString(): String
}

abstract class IceCreamDecorator {
  #iceCream: IceCream
  --
  +IceCreamDecorator(iceCream: IceCream)
  +getDescription(): String
  +getPrice(): double
}

class WaffleConeDecorator {
  +WaffleConeDecorator(iceCream: IceCream)
  +getDescription(): String
  +getPrice(): double
}

class ToppingDecorator {
  -toppingName: String
  -toppingPrice: double
  --
  +ToppingDecorator(iceCream: IceCream, toppingName: String, toppingPrice: double)
  +getDescription(): String
  +getPrice(): double
  +getToppingName(): String
  +getToppingPrice(): double
}

class BaseIceCream {
  -flavor: String
  -size: String
  -basePrice: double
  --
  +BaseIceCream(flavor: String, size: String)
  +BaseIceCream(flavor: String)
  +getDescription(): String
  +getPrice(): double
  +getFlavor(): String
  +getSize(): String
}

class SprinklesDecorator {
  +SprinklesDecorator(iceCream: IceCream)
  +getDescription(): String
  +getPrice(): double
}

class ChocolateDrizzleDecorator {
  +ChocolateDrizzleDecorator(iceCream: IceCream)
  +getDescription(): String
  +getPrice(): double
}

class ExtraScoopDecorator {
  +ExtraScoopDecorator(iceCream: IceCream)
  +getDescription(): String
  +getPrice(): double
}

Order *-- IceCream
IceCreamDecorator --|> IceCream
IceCreamDecorator *-- IceCream
WaffleConeDecorator --|> IceCreamDecorator
WaffleConeDecorator ..> IceCream
ToppingDecorator --|> IceCreamDecorator
ToppingDecorator ..> IceCream
BaseIceCream --|> IceCream
SprinklesDecorator --|> IceCreamDecorator
SprinklesDecorator ..> IceCream
ChocolateDrizzleDecorator --|> IceCreamDecorator
ChocolateDrizzleDecorator ..> IceCream
ExtraScoopDecorator --|> IceCreamDecorator
ExtraScoopDecorator ..> IceCream
@enduml